--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,8 +2,8 @@
 
 checks:
     php:
-        code_rating: true
-        duplication: true
+        code_rating: false
+        duplication: false
         fix_php_opening_tag: false
         remove_php_closing_tag: false
         one_class_per_file: false
