--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,4 +11,9 @@ build:
         analysis:
             tests:
                 override:
+                  -
+                command: 'vendor/bin/phpunit --coverage-clover=some-file'
+                coverage:
+                    file: 'some-file'
+                    format: 'clover'
                     - php-scrutinizer-run
