--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,9 +11,10 @@ build:
         analysis:
             tests:
                 override:
-                  -
+                    -
                 command: 'vendor/bin/phpunit --coverage-clover=some-file'
                 coverage:
-                    file: 'some-file'
+
+                    file: 'locale/core.yml'
                     format: 'clover'
                     - php-scrutinizer-run
