--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,41 @@
 {
-	"name": "felli/flarum-ext-japanese",
-	"type": "flarum-extension",
-	"description": "Japanese language pack.",
-	"keywords": ["extension", "flarum", "japanese", "locale", "translation"],
-	"license": "MIT",
-	"authors": [{
-		"name": "Sarah Tsumayoi",
-		"email": "tsuharusarah873@gmail.com"
-	}],
+    "name": "felli/flarum-ext-japanese",
+    "type": "flarum-extension",
+    "description": "Japanese language pack.",
+    "keywords": [
+        "extension",
+        "flarum",
+        "japanese",
+        "locale",
+        "translation"
+    ],
+    "version": "1.0.0",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Sarah Tsumayoi",
+            "email": "tsuharusarah873@gmail.com"
+        }
+    ],
     "support": {
         "issues": "https://github.com/felli/flarum-ext-japanese/issues",
         "source": "https://github.com/felli/flarum-ext-japanese"
     },
-	"require": {
-		"flarum/core": "^0.1.0-beta.7"
-	},
-	"extra": {
-		"branch-alias": {
-			"dev-master": "0.1.x-dev"
-		},
-		"flarum-extension": {
-			"title": "Japanese",
-			"icon": {
-				"image": "icon.svg",
-				"backgroundColor": "#fff",
-				"backgroundSize": "cover",
-				"backgroundPosition": "center"
-			}
-		},
-		"flarum-locale": {
-			"code": "ja_jp",
-			"title": "日本語"
-		}
-	}
+    "require": {
+        "extra": {
+            "flarum-extension": {
+                "title": "Japanese",
+                "icon": {
+                    "image": "icon.svg",
+                    "backgroundColor": "#fff",
+                    "backgroundSize": "cover",
+                    "backgroundPosition": "center"
+                }
+            },
+            "flarum-locale": {
+                "code": "ja_jp",
+                "title": "日本語"
+            }
+        }
+    }
 }
