--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,19 +1,29 @@
 # .scrutinizer.yml
-
 checks:
     php:
         fix_php_opening_tag: false
-         remove_php_closing_tag: false
-         no_mixed_inline_html: false
-         require_braces_around_control_structures: false
-         psr2_control_structure_declaration: false
-         avoid_superglobals: false
-         security_vulnerabilities: false
-         no_exit: false
-     javascript: true
+        remove_php_closing_tag: false
+        no_mixed_inline_html: false
+        require_braces_around_control_structures: false
+        psr2_control_structure_declaration: false
+        avoid_superglobals: false
+        security_vulnerabilities: false
+        no_exit: false
+    javascript: true
 filter: {  }
 coding_style:
     php:
         spaces:
             around_operators:
-                 concatenation: true
+                concatenation: true
+build:
+    nodes:
+        tests: true
+        analysis:
+            tests:
+                override:
+                    -
+                        command: phpcs-run
+                        use_website_config: true
+                    - php-scrutinizer-run
+                    - js-scrutinizer-run
