--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,14 +1,7 @@
 # .scrutinizer.yml
+
 checks:
-    php:
-        fix_php_opening_tag: false
-        remove_php_closing_tag: false
-        no_mixed_inline_html: false
-        require_braces_around_control_structures: false
-        psr2_control_structure_declaration: false
-        avoid_superglobals: false
-        security_vulnerabilities: false
-        no_exit: false
+    php: true
     javascript: true
 filter: {  }
 coding_style:
